--- a/django_tables2/templates/django_tables2/table.html
+++ b/django_tables2/templates/django_tables2/table.html
@@ -3,7 +3,9 @@
 {% if table.page %}
 <div class="table-container">
 {% endif %}
+{% block table %}
 <table{% if table.attrs %} {{ table.attrs.as_html }}{% endif %}>
+    {% block table.thead %}
     <thead>
         <tr class="{% cycle "odd" "even" %}">
         {% for column in table.columns %}
@@ -17,6 +19,8 @@
         {% endfor %}
         </tr>
     </thead>
+    {% endblock table.thead %}
+    {% block table.tbody %}
     <tbody>
         {% for row in table.page.object_list|default:table.rows %} {# support pagination #}
         <tr class="{% cycle "odd" "even" %}">
@@ -26,21 +30,34 @@
         </tr>
         {% empty %}
         {% if table.empty_text %}
+        {% block table.tbody.empty_text %}
         <tr><td colspan="{{ table.columns|length }}">{{ table.empty_text }}</td></tr>
+        {% endblock table.tbody.empty_text %}
         {% endif %}
         {% endfor %}
     </tbody>
+    {% endblock table.tbody %}
 </table>
+{% endblock table %}
+
 {% if table.page %}
+{% block pagination %}
 <ul class="pagination">
     {% if table.page.has_previous %}
+    {% block pagination.next %}
     <li class="previous"><a href="{% querystring table.prefixed_page_field=table.page.previous_page_number %}">Previous</a></li>
+    {% endblock pagination.next %}
     {% endif %}
+    {% block pagination.current %}
     <li class="current">Page {{ table.page.number }} of {{ table.paginator.num_pages }}</li>
+    {% endblock pagination.current %}
     {% if table.page.has_next %}
+    {% block pagination.next %}
     <li class="next"><a href="{% querystring table.prefixed_page_field=table.page.next_page_number %}">Next</a></li>
+    {% endblock pagination.next %}
     {% endif %}
 </ul>
+{% endblock pagination %}
 </div>
 {% endif %}
 {% endspaceless %}
